ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doodle-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: doodle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: doodle-app
            port:
              number: 5000
  tls:
  - hosts:
    - doodle.com
    secretName: doodle-tls
